fixed z-index

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   font-size: 2.5rem;
   width: 100%;
   text-align: center;
+  z-index: 1;
 }
 #particles-js{
   position: absolute;
@@ -36,6 +37,8 @@ body {
   height: 100%;
 }
 .social-network {
+  z-index: 1;
+  
   /* background-color: #334; */
   position: absolute;
   right: 0;
@@ -68,7 +71,7 @@ ul li a img:hover{
   background-color: rgb(37, 37, 37);
   overflow: hidden;
   position: fixed;
-  bottom: 0;
+  top: 0;
   width: 100%;
   z-index: 1000;
   opacity: 0.8;
